--- a/package.json
+++ b/package.json
@@ -8,16 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "aos": "^2.3.4",
+    "axios": "^0.27.2",
     "next": "10.2.0",
     "next-images": "^1.7.0",
+    "nextjs-progressbar": "^0.0.14",
+    "nodemailer": "^6.7.8",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "polished": "^4.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^15.3.0",
+    "@types/nodemailer": "^6.4.6",
     "@types/react": "^17.0.5",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
