--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^0.27.2",
-    "next": "10.2.0",
+    "next": "13.4.10",
     "next-images": "^1.7.0",
     "nextjs-progressbar": "^0.0.14",
     "nodemailer": "^6.7.8",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "polished": "^4.2.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "styled-components": "^5.3.0"
